Updates from Overleaf

--- a/Sobol-BayesCubature.tex
+++ b/Sobol-BayesCubature.tex
@@ -51,14 +51,14 @@
 \usepackage{algorithmicx}
 \usepackage{algpseudocode}
 %\usepackage[caption=false]{subfig}
-\usepackage{subcaption}
+%\usepackage{subcaption}
 \usepackage{booktabs, mathtools}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{url}
 \usepackage[titletoc,title]{appendix}
 %\usepackage{refcheck}  % points out unused labels, refs ...
 
-\captionsetup{compatibility=false}
+%\captionsetup{compatibility=false}
 
 \algdef{SE}[DOWHILE]{Do}{doWhile}{\algorithmicdo}[1]{\algorithmicwhile\ #1}%
 
