minor fixes in cite

--- a/FJHown23.bib
+++ b/FJHown23.bib
@@ -230,6 +230,15 @@
 	Title = {{GAIL---Guaranteed Automatic Integration Library in MATLAB}: {D}ocumentation for Version 2.1},
 	Year = {2015}}
 
+@misc{ChoEtal20a,
+	Author = {S.-C. T. Choi and Y. Ding and F. J. \HickernellFJ and L. Jiang and {\relax Ll}. A. {Jim\'enez Rugama} and D. Li and R. Jagadeeswaran and X. Tong and K. Zhang and Y. Zhang and X. Zhou},
+	Howpublished = {MATLAB software},
+	Pubtype = soft,
+	Title = {{GAIL}: {G}uaranteed {A}utomatic {I}ntegration {L}ibrary (Versions 1.0--2.3.1)},
+	Url = {http://gailgithub.github.io/GAIL_Dev/},
+	Year = {{2013--2020}},
+	Bdsk-Url-1 = {http://gailgithub.github.io/GAIL_Dev/}}
+
 @misc{ChoEtal19a,
 	Author = {S.-C. T. Choi and Y. Ding and F. J. \HickernellFJ and L. Jiang and {\relax Ll}. A. {Jim\'enez Rugama} and D. Li and R. Jagadeeswaran and X. Tong and K. Zhang and Y. Zhang and X. Zhou},
 	Date-Added = {2016-11-13 23:16:08 +0000},
